--- a/auto/config
+++ b/auto/config
@@ -3,6 +3,7 @@
 set -e
 
 lb config noauto \
+	--bootappend-live "boot=live components live-config.locales=uk_UA.UTF-8 live-config.timezone=Europe/Kyiv"
 	--apt-recommends false \
 	--apt-indices false \
 	--debootstrap-options "--variant=minbase" \
